Fix OS Version reporting for pre-10.10 MacOS Hosts

Bug: 889259
Change-Id: I18314c4dc37ff7d60ea8ba989cc6155834c02fce
Reviewed-on: https://chromium-review.googlesource.com/1244609
Commit-Queue: Joe Downing <joedow@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594204}